--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,8 +75,8 @@ jobs:
       - restore_cache:
           keys: [frontend-build]
       - run:
-          name: Test front-end
-          commands: |
+          name: Build front-end
+          command: |
             cd frontend
             npm install
             npm run test
@@ -89,11 +89,11 @@ jobs:
       - restore_cache:
           keys: [backend-build]
       - run:
-          name: Test back-end
-          commands: |
-            cd backend
-            npm install
-            npm run test
+          name: Back-end build
+          command: |
+             cd backend
+             npm install
+             npm run test
             
 #   scan-frontend:
 #     docker:
