--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -2,25 +2,15 @@
 
 - name: "configuration play." 
   hosts: web
-  user: ubuntu
+  remote_user: ubuntu
   become: true
   become_method: sudo
   become_user: root  
   gather_facts: false
-  # environment:
-  #   - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"  
-  #   - TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
-  #   - TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST')}}"
-  #   - TYPEORM_PORT: 5432
-  #   - TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME')}}"
-  #   - TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD')}}"
-  #   - TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE')}}"
-  #   - TYPEORM_MIGRATIONS: "{{ lookup('env', 'TYPEORM_MIGRATIONS')}}"
-  #   - TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR')}}"
   vars:
-    - ansible_python_interpreter: /usr/bin/python3
-    - ansible_host_key_checking: false
-    - ansible_stdout_callback: yaml
+    ansible_python_interpreter: /usr/bin/python3
+    ansible_host_key_checking: false
+    ansible_stdout_callback: yaml
 
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
@@ -33,8 +23,6 @@
       changed_when: false
 
     - setup:
-
-
 
   roles:
     - configure-server
