--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -279,15 +279,11 @@ jobs:
       - install_nodejs
       - run:
           name: Deploy backend
+          no_output_timeout: 30m
           command: |
-            cd backend
-            npm i
-            npm run build
-            cd ..
-            tar -C backend -czvf artifact.tar.gz .
+            pwd            
+            tar -C backend -czvf backend_artifact.tar.gz .
             cd .circleci/ansible
-            echo "Contents  of the inventory.txt file is -------"
-            cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
       - destroy-environment 
 
