--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -1,6 +1,10 @@
 Description: >
   UdaPeople backend stack.
 
+Parameters:
+  ID:
+    Description: Unique identifier.
+    Type: String
 
 Resources:
   VPC:
@@ -54,7 +58,7 @@ Resources:
   InstanceSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupName: !Sub UdaPeople-${ID}
+      GroupName: hehe
       GroupDescription: Allow port 22 and port 3030.
       SecurityGroupIngress:
         - IpProtocol: tcp
@@ -79,4 +83,4 @@ Resources:
       SubnetId: !Ref PublicSubnet1
       Tags:
         - Key: Name
-          Value: !Sub backend-${ID}
+          Value: hehe
