id added to names

--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -58,7 +58,7 @@ Resources:
   InstanceSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupName: hehe
+      GroupName:  !Sub UdaPeople-${ID}
       GroupDescription: Allow port 22 and port 3030.
       SecurityGroupIngress:
         - IpProtocol: tcp
@@ -83,4 +83,4 @@ Resources:
       SubnetId: !Ref PublicSubnet1
       Tags:
         - Key: Name
-          Value: hehe
+          Value: !Sub backend-${ID}
