--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -1,10 +1,10 @@
 Description: >
   UdaPeople backend stack.
 
-Parameters:
-  ID:
-    Description: Unique identifier.
-    Type: String
+# Parameters:
+#   ID:
+#     Description: Unique identifier.
+#     Type: String
 
 Resources:
   VPC:
@@ -58,7 +58,7 @@ Resources:
   InstanceSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupName:  !Sub UdaPeople-${ID}
+      GroupName:  !Sub UdaPeople-
       GroupDescription: Allow port 22 and port 3030.
       SecurityGroupIngress:
         - IpProtocol: tcp
@@ -69,18 +69,15 @@ Resources:
           FromPort: 3030
           ToPort: 3030
           CidrIp: 0.0.0.0/0
-
   EC2Instance:
     Type: AWS::EC2::Instance
     Properties:
+      ImageId: ami-068663a3c619dd892
       InstanceType: t2.micro
-      SecurityGroups:
-        - Ref: InstanceSecurityGroup
-      KeyName: udacity # If you use another key pair name, you should change this value to match.
-      # If this ami id is not available for you, you can find another (https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/finding-an-ami.html)
-      # Ubuntu 18 or higher works fine
-      ImageId: ami-068663a3c619dd892 
       SubnetId: !Ref PublicSubnet1
+      KeyName: udacity
+      SecurityGroupIds: 
+        - !Ref InstanceSecurityGroup
       Tags:
-        - Key: Name
-          Value: !Sub backend-${ID}
+       - Key: Name
+         Value: !Sub backend-
