scan frontend fix

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -127,18 +127,18 @@ jobs:
             
   scan-frontend:
     docker:
-      - image: circleci/node:13.8.0
+      - image: cimg/node:13.8.0
     steps:
       - checkout
       - restore_cache:
           keys: [frontend-build]
       - run:
-          name: Scan frontend
+          name: Front-end Scan
           command: |
-              cd frontend
-              npm install
-              npm audit fix --audit-level=critical --force
-              npm audit --audit-level=critical
+            cd frontend
+            npm install
+            npm audit fix --force --audit-level=critical
+            npm audit --audit-level=critical
 
   scan-backend:
     docker:
