--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -153,6 +153,7 @@ jobs:
               cd backend
               npm install
               npm audit fix --audit-level=critical --force
+              npm update loader-utils --depth 2
               npm audit fix --force
               npm audit --audit-level=critical
 
