--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -138,6 +138,7 @@ jobs:
               cd backend
               npm install
               npm audit fix --audit-level=critical --force
+              npm update mkdirp --depth 2
               npm audit --audit-level=critical
 
   scan-backend:
