--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -134,6 +134,8 @@ jobs:
           command: |
             cd frontend
             npm install
+            npm update loader-utils --depth 2
+            npm update minimist --depth 4
             npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
 
@@ -153,6 +155,7 @@ jobs:
           command: |
             cd backend
             npm install
+            npm update mkdirp --depth 2
             npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
 
