--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -388,65 +388,65 @@ jobs:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - destroy-environment
 
-  # smoke-test:
-  #   docker:
-  #     # Lightweight Docker image 
-  #     - image: circleci/node:13.8.0
-  #   steps:
-  #     - print_pipeline_id
-  #     # Checkout code from git
-  #     - checkout
-  #     - run:
-  #         name: Install dependencies
-  #         command: |
-  #           # your code here
-  #           sudo apt install -y tar gzip curl unzip
-  #           which curl
-  #           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-  #           unzip awscliv2.zip
-  #           sudo ./aws/install
-  #     - run:
-  #         name: Install node modules
-  #         command: |
-  #           cd backend
-  #           npm install
-  #     - attach_workspace:
-  #         at: ~/
-  #     - run:
-  #         name: Backend smoke test.
-  #         command: |
-  #           # your code here
-  #           echo " --- Cat inventory file --- "            
-  #           export BACKEND_IP=$(cat ~/project/.circleci/ansible/inventory.txt | sed 1d)
-  #           echo "The BACKEND IP: ${BACKEND_IP}"
-  #           export API_URL="http://${BACKEND_IP}:3030"
-  #           echo "The API URL: ${API_URL}"
-  #           sleep 60
-  #           curl "${API_URL}/api/status"
-  #           if curl "${API_URL}/api/status" | grep "ok"
-  #           then
-  #               exit 0
-  #           else
-  #               exit 1
-  #           fi            
-  #     - run:
-  #         name: Frontend smoke test.
-  #         command: |
-  #           # your code here
-  #           echo ${CIRCLE_WORKFLOW_ID:0:7}
-  #           URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"
-  #           echo ${URL} 
-  #           if curl -s ${URL} | grep "Welcome"
-  #           then
-  #               # Change this to 0 after the job fails
-  #               exit 0
-  #           else
-  #               exit 1
-  #           fi
-  #     # Here's where you will add some code to rollback on failure
-  #     - revert-migrations:
-  #         workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-  #     - destroy-environment
+  smoke-test:
+    docker:
+      # Lightweight Docker image 
+      - image: circleci/node:13.8.0
+    steps:
+      - print_pipeline_id
+      # Checkout code from git
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            # your code here
+            sudo apt install -y tar gzip curl unzip
+            which curl
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
+      - run:
+          name: Install node modules
+          command: |
+            cd backend
+            npm install
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Backend smoke test.
+          command: |
+            # your code here
+            echo " --- Cat inventory file --- "            
+            export BACKEND_IP=$(cat ~/project/.circleci/ansible/inventory.txt | sed 1d)
+            echo "The BACKEND IP: ${BACKEND_IP}"
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "The API URL: ${API_URL}"
+            sleep 60
+            curl "${API_URL}/api/status"
+            if curl "${API_URL}/api/status" | grep "ok"
+            then
+                exit 0
+            else
+                exit 1
+            fi            
+      - run:
+          name: Frontend smoke test.
+          command: |
+            # your code here
+            echo ${CIRCLE_WORKFLOW_ID:0:7}
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"
+            echo ${URL} 
+            if curl -s ${URL} | grep "Welcome"
+            then
+                # Change this to 0 after the job fails
+                exit 0
+            else
+                exit 1
+            fi
+      # Here's where you will add some code to rollback on failure
+      - revert-migrations:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - destroy-environment
 
   # cloudfront-update:
   #   docker:
